# socid-extractor

./: CHANGELOG.md  CONTRIBUTING.md  FIELDS.md  METHODS.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: testing-and-ci.md
socid_extractor/: __init__.py  cli.py  schemes.py
tests/: test_e2e.py  test_socid_improvements.py
