[build-system]
# socid-extractor publishes to PyPI via `python -m build` (see
# .github/workflows/python-publish.yml). Sticking with setuptools keeps
# the release pipeline simple and avoids a poetry-core dependency for a
# library this small.
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socid-extractor"
dynamic = ["version"]  # version is read from socid_extractor/__init__.py
description = "Extract accounts' identifiers and metadata from personal pages on various platforms."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Soxoj", email = "soxoj@protonmail.com"},
]
keywords = ["osint", "scraping", "username", "profile", "extractor", "identity"]
classifiers = [
    # Per PEP 639, the `License :: …` trove classifier is no longer
    # allowed when `license` carries an SPDX expression (we use `"MIT"`
    # above) — newer setuptools rejects the combination.
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Production dependencies. Versions use `>=,<` ranges (maigret-style) so
# downstream installs aren't pinned to a single point release but also
# can't silently jump major versions that may break our parsing.
dependencies = [
    "requests>=2.32.4,<3.0",
    "python-dateutil>=2.8.1,<3.0",
    "beautifulsoup4>=4.14.3,<5.0",
]

[project.optional-dependencies]
# Install with: pip install 'socid-extractor[test]'
# Used by CI (.github/workflows/python-package.yml).
test = [
    "pytest>=9.0,<10.0",
    "pytest-rerunfailures>=16.2,<17.0",
    "pytest-xdist>=3.8,<4.0",
]
# Install with: pip install 'socid-extractor[dev]'
# Superset of `test` — adds linters / type-checker / formatter.
dev = [
    "pytest>=9.0,<10.0",
    "pytest-rerunfailures>=16.2,<17.0",
    "pytest-xdist>=3.8,<4.0",
    "flake8>=7.1,<8.0",
    "mypy>=1.14,<3.0",
    "black>=25.1,<27.0",
]

[project.urls]
Homepage = "https://github.com/soxoj/socid-extractor"
Repository = "https://github.com/soxoj/socid-extractor"
"Bug Tracker" = "https://github.com/soxoj/socid-extractor/issues"
Changelog = "https://github.com/soxoj/socid-extractor/blob/master/CHANGELOG.md"
Funding = "https://www.patreon.com/soxoj"

[project.scripts]
# Run with: socid_extractor <url>
socid_extractor = "socid_extractor.cli:run"

[tool.setuptools.dynamic]
version = {attr = "socid_extractor.__version__"}

[tool.setuptools.packages.find]
include = ["socid_extractor*"]

[tool.setuptools.package-data]
socid_extractor = ["py.typed"]

# ── Type checking ───────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "dateutil.*",
    "bs4.*",
]
ignore_missing_imports = true

# ── Linting ─────────────────────────────────────────────────────────
[tool.flake8]
# E501 (line too long) is ignored project-wide; CI uses
# `--max-line-length=127` for the warning-only pass.
ignore = ["E501"]

# ── Formatting ──────────────────────────────────────────────────────
# Optional — black is in the [dev] extra so contributors can run it,
# but no CI gate enforces it yet.
[tool.black]
line-length = 127
target-version = ["py310", "py311", "py312", "py313", "py314"]
skip-string-normalization = true

# ── Tests ───────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "github_failed: requests from GitHub Actions CI servers are blocked",
    "rate_limited: anti-bot / captcha / rate limiting from the site",
    "requires_cookies: cookies are required to get content",
]
